# markedit

./: .gitmodules  .travis.yml  Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
benches/: benchmarks.rs
getopts/: enum.Fail.html  enum.HasArg.html  enum.Occur.html  enum.ParsingStyle.html  struct.Matches.html  struct.Options.html
markedit/: all.html  fn.between.html  fn.change_text.html  fn.exact_text.html  fn.insert_after.html  fn.insert_before.html  fn.insert_markdown_before.html  fn.link_with_url_containing.html  fn.match_indices.html  fn.owned_event.html  fn.parse.html  fn.rewrite.html  fn.text.html  fn.text_containing.html  index.html  sidebar-items.js  struct.Always.html  struct.And.html  struct.FallingEdge.html  struct.Heading.html  struct.OneShot.html  struct.Ref.html  struct.Rewritten.html  struct.StartOfNextLine.html  struct.Writer.html  trait.Matcher.html  trait.Rewriter.html
memchr/: fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
pulldown_cmark/: all.html  enum.Alignment.html  enum.CodeBlockKind.html  enum.CowStr.html  enum.Event.html  enum.LinkType.html  enum.Tag.html  index.html  struct.InlineStr.html  struct.OffsetIter.html  struct.Options.html  struct.Parser.html
src/: lib.rs
unicase/: struct.Ascii.html  struct.UniCase.html
(+110 files in other folders)
