[package]
name = "markedit"
version = "0.3.1-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "An ergonomic library for manipulating unstructured Markdown documents."
repository = "https://github.com/Michael-F-Bryan/markedit"
keywords = ["markdown", "streaming", "edit"]
categories = ["text-processing"]
exclude = ["benches/adventures.michaelfbryan.com"]

[badges]
travis-ci = { repository = "Michael-F-Bryan/markedit", branch = "master" }

[dependencies]
pulldown-cmark = "0.7"

[dev-dependencies]
criterion = "0.3"
glob = "0.3.0"

[[bench]]
name = "benchmarks"
harness = false
